kubernetes/overseerr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: overseerr
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
      app.kubernetes.io/name: overseerr
      app.kubernetes.io/instance: overseerr
  template:
    metadata:
      labels:
        app: overseerr
        app.kubernetes.io/name: overseerr
        app.kubernetes.io/instance: overseerr
    spec:
      containers:
      - name: overseerr
        image: linuxserver/overseerr:1.35.0@sha256:6108ed066d4a919c05251d9dab041c1e55e67ff7247e7b31be97b65ffcbaeeb1
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-config
