kubernetes/overseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: overseerr
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: iscsi-chap-secret

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
      app.kubernetes.io/name: overseerr
      app.kubernetes.io/instance: overseerr
  template:
    metadata:
      labels:
        app: overseerr
        app.kubernetes.io/name: overseerr
        app.kubernetes.io/instance: overseerr
    spec:
      containers:
      - name: overseerr
        image: linuxserver/overseerr
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        iscsi:
          targetPortal: 172.19.74.139
          iqn: iqn.2000-01.com.synology:fs2.Target-11.05f22bcf4f5
          lun: 1
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
