kubernetes/overseerr/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: overseerr
  labels:
    app: overseerr

spec:
  ports:
  - port: 5055
    targetPort: 5055
    protocol: TCP
    name: http
  selector:
    app: overseerr
