kubernetes/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: overseerr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Overseerr
    gethomepage.dev/description: Request Manager
    gethomepage.dev/group: Media
    gethomepage.dev/icon: overseerr.png

spec:
  tls:
  - hosts:
    - overseerr.k.oneill.net
    secretName: overseerr-tls
  rules:
  - host: overseerr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              number: 5055
  ingressClassName: nginx
